<resources>
    <string name="app_name">Apple</string>
    <string name="action_settings">Settings</string>
    <string name="contact_text">For any feedback, complaints or suggestions, Please write to us</string>
    <string name="profile_name">Hugh Jackman</string>

    <!--drawer_view Items-->
    <string name="location">Location</string>
    <string name="orders">Orders</string>
    <string name="ContactUs">Contact Us</string>
    <string name="TC">T&amp;C</string>
    <string name="AboutUs">About Us</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="home">Home</string>
    <string name="home_text">Home Text</string>
    <string name="location_text">Location Text</string>
    <string name="orders_text">Orders Text</string>
    <string name="contact_us_text">Contact Us Text</string>
    <string name="terms_conditon_text">Terms Condition Text</string>
    <string name="about_us_text">About Us Text</string>

    <string name="product_1">Dog</string>
    <string name="product_2">Cat</string>
    <string name="product_3">Fish</string>
    <string name="title_activity_dog_shopping">DogShoppingActivity</string>

    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>

    <!--fonts-->
    <string name="typeface_bold">fonts/Whitney-Semibold-Bas.otf</string>
    <string name="typeface_light">fonts/Whitney-Book-Bas.otf</string>
    <string name="typeface_light_italics">fonts/Whitney-BookItal-Bas.otf</string>
    <string name="typeface_regular">fonts/Whitney-Book-Bas.otf</string>
    <string name="typeface_stylish">fonts/Leitura-Display-Swashes.otf</string>

    <!--DogShoppingActivity-->

    <string name="dogActivityTitle">Dogs</string>

    <!--Login-->
    <string name="login_error">Error during login</string>
    <string name="facebook_app_id">134585900293221</string>
    <string name="Login">Login_page</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="sign_out">SignOut</string>
    <string name="Home">Home</string>
    <string name="loading">Loading....</string>

    <string name="server_client_id">348438575489-gogur8f813r2urf2dpn0ubiagh6ib8ai.apps.googleusercontent.com</string>


    <!--Login-Base-->


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="title_activity_forgot">ForgotPassActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to login -->
    <string name="app_decription">Your awesome app</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>


    <!-- Strings related to forgot account-->
    <string name="action_recover">Recover</string>
    <string name="remembered_password">Just remembered it?</string>

    <!-- Strings related to create account -->
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>




</resources>
