
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"


    tools:context=".LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

           <!-- <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


            </RelativeLayout>-->

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                android:orientation="vertical"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@mipmap/ic_person_black_24dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                    <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:drawableLeft="@mipmap/ic_lock_black_24dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.sumit.apple.views.TypefaceTextView
                        android:id="@+id/txt_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/noaccount_background"
                        android:clickable="true"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingLeft="2dp"
                        android:paddingTop="15dp"
                        android:text="@string/forgot_password"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/grey_1000" />


                    <com.example.sumit.apple.views.TypefaceTextView
                        android:id="@+id/txt_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/noaccount_background"
                        android:clickable="true"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingRight="2dp"
                        android:paddingTop="15dp"
                        android:text="@string/create_account"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/grey_1000" />
                </LinearLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/grey_0" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/border_shadow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/different_login"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey_1000" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp" />

                <!--<com.google.android.gms.common.SignInButton
                    android:id="@+id/g_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />-->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_view2"
                    android:layout_width="fill_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    card_view:cardCornerRadius="2dp"
                    card_view:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button xmlns:fb="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/btn_login_google"
                            style="@style/SocialLoginButton"
                            android:layout_width="325dp"
                            android:layout_height="53dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/google_image_size"
                            android:enabled="true"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="Login with Google + "
                            android:textAllCaps="false"
                            android:textSize="15sp" />
                        <!-- <com.facebook.login.widget.LoginButton
                             xmlns:fb="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/f_sign_in_button"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="10dp"
                             fb:login_text="FACEBOOK"
                             android:padding="5dp" />-->
                        <!--<Space
                            android:layout_width="1dp"
                            android:layout_height="6dp" />-->

                        <com.facebook.login.widget.LoginButton xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/fb_login_button"
                            style="@style/SocialLoginButton"
                            android:layout_width="325dp"
                            android:layout_height="53dp"
                            android:layout_gravity="center_horizontal"
                            android:drawableLeft="@mipmap/ic_login_facebook"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="11dp"
                            android:paddingRight="15dp"
                            android:text="Login with Facebook"
                            android:textAllCaps="false"
                            android:textColor="@color/material_blue_grey_950"
                            android:textSize="15sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    </RelativeLayout>

</LinearLayout>
